force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/leadfeederapp__WebsiteVisit__c.object-meta.xml
<CustomObject>
    <description>Website visits from Leadfeeder</description>
    <label>Leadfeeder Visit</label>
    <nameField>
        <label>Leadfeeder Visit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leadfeeder Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>