force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Account__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>WebVisits</relationshipName>
    <type>Lookup</type>
</CustomField>