force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Campaign__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Campaign__c</fullName>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>