force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Contact__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leadfeeder Visits</relationshipLabel>
    <relationshipName>Leadfeeder_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>