force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Duration__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Duration__c</fullName>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>