force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__DurationSeconds__c</fullName>
    <label>Duration in seconds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>