force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__EmailAddress__c</fullName>
    <description>Email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>