force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__ExternalID__c</fullName>
    <description>External Web Visit ID</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>