force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Keyword__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Keyword__c</fullName>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>