force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__LandingPage__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__LandingPage__c</fullName>
    <label>Landing Page</label>
    <type>Url</type>
</CustomField>