force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Lead__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leadfeeder Visits</relationshipLabel>
    <relationshipName>Leadfeeder_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>