force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Medium__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Medium__c</fullName>
    <label>Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>