force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Pages__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Pages__c</fullName>
    <label>Pages</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>