force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Pageviews__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Pageviews__c</fullName>
    <label>Pageviews</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>