force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Referrer__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Referrer__c</fullName>
    <label>Referrer</label>
    <type>Url</type>
</CustomField>