force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/fields/leadfeederapp__Source__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>