force-app/main/default/objects/leadfeederapp__WebsiteVisit__c/listViews/leadfeederapp__All_Leadfeeder_Visits.listView-meta.xml
<ListView>
    <fullName>leadfeederapp__All_Leadfeeder_Visits</fullName>
    <columns>NAME</columns>
    <columns>leadfeederapp__Account__c</columns>
    <columns>leadfeederapp__Lead__c</columns>
    <columns>leadfeederapp__Referrer__c</columns>
    <columns>leadfeederapp__Source__c</columns>
    <columns>leadfeederapp__Duration__c</columns>
    <columns>leadfeederapp__EmailAddress__c</columns>
    <columns>leadfeederapp__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leadfeeder Visits</label>
</ListView>